edit order by issue add button in add manufacturer supplier department add

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 /build
 /dist
 /tags
+myapp_cake_*
+*.log
+*.log.*
+database.php
+core.php
 
 # IDE and editor specific files #
 #################################
